# MondooDatabaseEngine

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/private/: DB.cpp  QueryBuilder.cpp  SQL.cpp  SQLCompiler.cpp  Table.cpp
src/public/: DB.h  Model.h  QueryBuilder.h  Reflection.h  SQL.h  SQLCompiler.h  StringUtility.h  Table.h  Types.h
